--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="content-wrapper">
-        
+        <h1>Website Under Construction</h1>
     </div>
 </body>
 </html>
