--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
     <div class="content-wrapper">
         <h1>Website Under Construction</h1>
+        <p>We would be back up and running soon. In the meantime, check out the cool things on our other platforms or leave a message at  userplatform@gmail.com</p>
+        <label for="user-input">
+            <input type="email" placeholder="email address" id="user-input">
+            <input type="submit" value="subscribe">
+        </label>
+        <p>so, you be the first to be notified when we are back up</p>
+        <div class="social-icons">
+            <img src="assets/design/icons/github_Vector.png" alt="">
+        </div>
     </div>
 </body>
 </html>
