image link wrap in a tag for linking

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </label>
         <p>so, you be the first to be notified when we are back up</p>
         <div class="social-icons">
-            <img src="assets/icons/github_Vector.png" alt="">
+            <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
         </div>
     </div>
 </body>
