--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <p>so, you be the first to be notified when we are back up</p>
         <div class="social-icons">
             <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
+            <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
         </div>
     </div>
 </body>
