--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="social-icons">
             <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
             <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="assets/icons/linkedin.png" alt=""></a>
             <a href=""><img src="" alt=""></a>
             <a href=""><img src="" alt=""></a>
         </div>
