added twitter icon

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="social-icons">
             <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
             <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
-            <a href=""><img src="assets/icons/linkedin.png" alt=""></a>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="assets/icons/linkedin.png" alt="linkedin"></a>
+            <a href=""><img src="assets/icons/twitter-fill.png" alt="twitter-fill"></a>
             <a href=""><img src="" alt=""></a>
         </div>
     </div>
