added telegram icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
             <a href=""><img src="assets/icons/linkedin.png" alt="linkedin"></a>
             <a href=""><img src="assets/icons/twitter-fill.png" alt="twitter-fill"></a>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="assets/icons/bx_bxl-telegram.png" alt="bx_bxl-telegram"></a>
         </div>
     </div>
 </body>
