style the rest of page content

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="content-wrapper">
         <h1>Website Under Construction</h1>
-        <p>We would be back up and running soon. In the meantime, check out the cool things on our other platforms or leave a message at  userplatform@gmail.com</p>
+        <p id="display-article">We would be back up and running soon. In the meantime, check out the cool things on our other platforms or leave a message at  userplatform@gmail.com</p>
         <label for="user-input">
             <input type="email" placeholder="email address" id="user-input">
             <input type="submit" value="subscribe">
         </label>
-        <p>so, you be the first to be notified when we are back up</p>
+        <p id="user-notification">so, you be the first to be notified when we are back up</p>
         <div class="social-icons">
             <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
             <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
