added all social media links

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </label>
         <p id="user-notification">so, you be the first to be notified when we are back up</p>
         <div class="social-icons">
-            <a href=""><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
-            <a href=""><img src="assets/icons/mail-send.png" alt=""></a>
-            <a href=""><img src="assets/icons/linkedin.png" alt="linkedin"></a>
-            <a href=""><img src="assets/icons/twitter-fill.png" alt="twitter-fill"></a>
-            <a href=""><img src="assets/icons/bx_bxl-telegram.png" alt="bx_bxl-telegram"></a>
+            <a href="https://github.com/designeralabi"><img src="assets/icons/github_Vector.png" alt="github_Vector"></a>
+            <a href="mailto:bdlkrmalabi@gmail.com"><img src="assets/icons/mail-send.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/designbyalabi/"><img src="assets/icons/linkedin.png" alt="linkedin"></a>
+            <a href="https://twitter.com/code_kareem"><img src="assets/icons/twitter-fill.png" alt="twitter-fill"></a>
+            <a href="https://t.me/seniortechy"><img src="assets/icons/bx_bxl-telegram.png" alt="bx_bxl-telegram"></a>
         </div>
     </div>
 </body>
