replace dummy gmail with gmail address

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content-wrapper">
         <h1>Website Under Construction</h1>
-        <p id="display-article">We would be back up and running soon. In the meantime, check out the cool things on our other platforms or leave a message at  userplatform@gmail.com</p>
+        <p id="display-article">We would be back up and running soon. In the meantime, check out the cool things on our other platforms or leave a message at 👉 <a href="mailto:bdlkrmalabi@gmail.com" id="click-here">here</a></p>
         <label for="user-input">
             <input type="email" placeholder="email address" id="user-input">
             <input type="submit" value="subscribe">
